'新增版本信息接口'
