# swagger/swagger.yml
@@ -216,6 +216,21 @@ paths:
       responses:
         "200":
           description: 获取图片成功
+  /public/version:
+    get:
+      tags:
+      - public
+      description: 版本信息
+      operationId: PublicController.版本信息
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/Version'
+        "400":
+          description: token验证失败
+        "403":
+          description: body is empty
   /user/:
     get:
       tags:
@@ -334,6 +349,9 @@ paths:
         "200":
           description: '{struct} {"name":"admin","id":"125"}'
 definitions:
+  Version:
+    title: Version
+    type: object
   models.BookInfo:
     title: BookInfo
     type: object
